test/errors/type/io/open1.yasl
let f = io.open('f', true)
